apps/financial/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financial-backend
  namespace: financial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financial-backend
  template:
    metadata:
      labels:
        app: financial-backend
    spec:
      containers:
      - name: financial-backend
        image: ghcr.io/felipecisotto/financial-backend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
